--- a/src/stm32/Kconfig
+++ b/src/stm32/Kconfig
@@ -32,6 +32,9 @@ choice
     config MACH_STM32F207
         bool "STM32F207"
         select MACH_STM32F2
+    config MACH_STM32F303
+        bool "STM32F303"
+        select MACH_STM32F3
     config MACH_STM32F401
         bool "STM32F401"
         select MACH_STM32F4
@@ -81,6 +84,8 @@ config MACH_STM32F1
     bool
 config MACH_STM32F2
     bool
+config MACH_STM32F3
+    bool
 config MACH_STM32F4
     bool
 config MACH_STM32G0
@@ -94,13 +99,13 @@ config MACH_STM32F4x5 # F405, F407, F429 series
 config HAVE_STM32_USBFS
     bool
     default y if MACH_STM32F0x2 || MACH_STM32G0
-    default y if (MACH_STM32F103 || MACH_STM32F070) && !STM32_CLOCK_REF_INTERNAL
+    default y if (MACH_STM32F103 || MACH_STM32F303 || MACH_STM32F070) && !STM32_CLOCK_REF_INTERNAL
 config HAVE_STM32_USBOTG
     bool
     default y if MACH_STM32F2 || MACH_STM32F4 || MACH_STM32H7
 config HAVE_STM32_CANBUS
     bool
-    default y if MACH_STM32F1 || MACH_STM32F2 || MACH_STM32F4x5 || MACH_STM32F446 || MACH_STM32F0x2
+    default y if MACH_STM32F1 || MACH_STM32F2 || MACH_STM32F3 || MACH_STM32F4x5 || MACH_STM32F446 || MACH_STM32F0x2
 
 config MCU
     string
@@ -110,6 +115,7 @@ config MCU
     default "stm32f072xb" if MACH_STM32F072
     default "stm32f103xe" if MACH_STM32F103
     default "stm32f207xx" if MACH_STM32F207
+    default "stm32f303xe" if MACH_STM32F303
     default "stm32f401xc" if MACH_STM32F401
     default "stm32f405xx" if MACH_STM32F405
     default "stm32f407xx" if MACH_STM32F407
@@ -124,6 +130,7 @@ config CLOCK_FREQ
     default 48000000 if MACH_STM32F0
     default 64000000 if MACH_STM32F103 && STM32_CLOCK_REF_INTERNAL
     default 72000000 if MACH_STM32F103
+    default 72000000 if MACH_STM32F303
     default 120000000 if MACH_STM32F207
     default 84000000 if MACH_STM32F401
     default 168000000 if MACH_STM32F4x5
@@ -139,6 +146,7 @@ config FLASH_SIZE
     default 0x10000 if MACH_STM32F103 # Flash size of stm32f103x8 (64KiB)
     default 0x40000 if MACH_STM32F2 || MACH_STM32F401
     default 0x80000 if MACH_STM32F4x5 || MACH_STM32F446
+    default 0x80000 if MACH_STM32F303 # Flash size of stm32f303x8 (512KiB)
     default 0x20000 if MACH_STM32G0B1
     default 0x20000 if MACH_STM32H750
     default 0x200000 if MACH_STM32H743
@@ -155,6 +163,7 @@ config RAM_SIZE
     default 0x4000 if MACH_STM32F070 || MACH_STM32F072
     default 0x5000 if MACH_STM32F103 # Ram size of stm32f103x8 (20KiB)
     default 0x20000 if MACH_STM32F207
+    default 0x10000 if MACH_STM32F303 # Ram size of stm32f303x8 (64KiB)
     default 0x10000 if MACH_STM32F401
     default 0x20000 if MACH_STM32F4x5 || MACH_STM32F446
     default 0x24000 if MACH_STM32G0B1
@@ -167,10 +176,10 @@ config STACK_SIZE
 
 config STM32F103GD_DISABLE_SWD
     bool "Disable SWD at startup (for GigaDevice stm32f103 clones)"
-    depends on MACH_STM32F103 && LOW_LEVEL_OPTIONS
+    depends on (MACH_STM32F103 || MACH_STM32F303) && LOW_LEVEL_OPTIONS
     default n
     help
-        The GigaDevice clone of the STM32F103 may not be able to
+        The GigaDevice clone of the STM32F103 or STM32F303 may not be able to
         reliably disable SWD at run-time. This can prevent the PA13
         and PA14 pins from being available. Selecting this option
         disables SWD at startup and thus makes these pins available.
@@ -187,7 +196,7 @@ choice
     config STM32_FLASH_START_5000
         bool "20KiB bootloader" if MACH_STM32F103
     config STM32_FLASH_START_7000
-        bool "28KiB bootloader" if MACH_STM32F103
+        bool "28KiB bootloader" if MACH_STM32F103 || MACH_STM32F303
     config STM32_FLASH_START_8000
         bool "32KiB bootloader" if MACH_STM32F1 || MACH_STM32F2 || MACH_STM32F4
     config STM32_FLASH_START_8800
